# fdf_basic_graphics

./: CMakeLists.txt  Makefile  color.c  event_handler.c  fdf.h  main.c  menu.c  mouse_handler.c  projection.c  read_data.c  render.c  render_support.c  support.c
fdf/: .render.c.swp  Makefile  event_handler.c  fdf.h  main.c  menu.c  projection.c  render.c  support.c
fdf/maps/: easy_2iso.fdf  easy_3iso.fdf  easy_5.fdf
fdf_int/: event_handler.c  fdf.h  main.c  projection.c  read_data.c  render.c  support.c
get_next_line/: get_next_line.c  get_next_line.h
libft/: Makefile
maps/easy/: easy_1.fdf  easy_3.fdf  medium_3.fdf
